--- a/.gitignore
+++ b/.gitignore
@@ -215,6 +215,8 @@ TSWLatexianTemp*
 
 # auto folder when using emacs and auctex
 /auto/*
+/tex/sty/auto/*
 
 # expex forward references with \gathertags
 *-tags.tex
+
