added ans template and transaction style

--- a/.gitignore
+++ b/.gitignore
@@ -218,9 +218,11 @@ TSWLatexianTemp*
 /tex/sty/auto/*
 /style_sheet/auto/*
 /tex/bib/auto/*
+/tex/auto/*
 
 # expex forward references with \gathertags
 *-tags.tex
 
 \#*
 .\#*
+
